--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tony Deep's Blogs
-name: "Tony's Tech Blog"
+name: Tony Deep's Blogs
 author: Tony Khanh
 twitter_username: TVKhanh_ICTU
 baseurl: "/"
