--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Tony Deep's Blogs
 name: &name "Tony Khánh"
+author: Tony Khanh
 twitter_username: TVKhanh_ICTU
-baseurl: 
 description: &description "Science with a spirit of adventure!"
 url: https://tonydeep.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 profile_url: "http://tonydeep.github.io"
