--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Tony Deep's Blogs
-description: Science with a spirit of adventure
-baseurl: "/"
-url: https://tonydeep.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-profile_url: "http://tonydeep.github.io"
-name: Tony Khánh
-author: Tony Khanh
-twitter_username: TVKhanh_ICTU
+# title: Tony Deep's Blogs
+# description: Science with a spirit of adventure
+# baseurl: "/"
+# url: https://tonydeep.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# profile_url: "http://tonydeep.github.io"
+# name: Tony Khánh
+# author: Tony Khanh
+# twitter_username: TVKhanh_ICTU
 
 # Build settings
 markdown: kramdown
