--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Tony Deep's Blogs
-name: "Tony's Tech Blog"
+name: "Tony Khanh"
 author: Tony Khanh
 twitter_username: TVKhanh_ICTU
 baseurl: "/"
-description: Document my learning notes.
+description: Science with a spirit of adventure.
 profile_url: "http://tonydeep.github.io"
 
 # Build settings
